--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   builder:
     container_name: qt-gst-builder
     build:
-      context: ./.docker/5.15.8-lts-lgpl-gst-1.20.6-android
+      context: ./.docker/5.15.8-lts-lgpl-gst-1.22.5
       dockerfile: Dockerfile
     #   network: host
     # network_mode: host
