--- a/.docker/5.15.8-lts-lgpl-gst-1.23.0-fedora/Dockerfile-fedora-faac-bootstrap-rust-unwind-22-7
+++ b/.docker/5.15.8-lts-lgpl-gst-1.23.0-fedora/Dockerfile-fedora-faac-bootstrap-rust-unwind-22-7
@@ -2,7 +2,7 @@ FROM registry.fedoraproject.org/fedora:38
 
 ENV TERM="dumb"
 
-ARG DEFAULT_BRANCH="faac"
+ARG DEFAULT_BRANCH="1.22"
 
 # System setup
 RUN echo "fastestmirror=true" >>  /etc/dnf/dnf.conf && \
@@ -32,12 +32,12 @@ RUN dnf update -y \
 #     dnf install -y perl-FindBin || \
 #     dnf provides *FindBin*  # This will help identify if the package or its files are provided under a different name
 
-RUN git clone https://github.com/drunkod/cerbero.git && \
+RUN git clone -b ${DEFAULT_BRANCH} https://github.com/drunkod/cerbero.git && \
     mkdir $HOME/.cerbero && \
     echo "allow_parallel_build=True" > $HOME/.cerbero/cerbero.cbc && \
     echo "use_ccache=True" >> $HOME/.cerbero/cerbero.cbc && \
     echo " " > $HOME/.cerbero/cerbero.cbc && \
-    cd cerbero && git checkout 1.22.7 && \
+    cd cerbero && \
       echo "local_sources=\"/cerbero/cerbero-sources\"" >> /usr/src/localconf.cbc && \
       echo "home_dir=\"/cerbero/cerbero-build\"" >> /usr/src/localconf.cbc && \
       echo "# Set custom remote and branch for all gstreamer recipes" >> /usr/src/localconf.cbc && \ 
