--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 *.tar.gz
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-aarch64.la
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-aarch64.so
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-aarch64.so.8
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-aarch64.so.8.0.1
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-coredump.la
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-coredump.so
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-coredump.so.0
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-coredump.so.0.0.0
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-generic.so
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-ptrace.la
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-ptrace.so
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-ptrace.so.0
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-ptrace.so.0.0.0
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-setjmp.la
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-setjmp.so
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-setjmp.so.0
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind-setjmp.so.0.0.0
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind.la
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind.so
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind.so.8
+gcfhvdbcwp4s70wqgs4fdfb744lgl43i-libunwind-1.6.2/lib/libunwind.so.8.0.1
