--- a/docker-compose-fedora-gst-delete_rs_plugins.yml
+++ b/docker-compose-fedora-gst-delete_rs_plugins.yml
@@ -2,12 +2,12 @@ version: '3.6'
 
 services:
   builder:
-    container_name: fedora-gst-main-rust-bootstrap
+    container_name: fedora-gst-main-rust-bootstrap-delete_rs_plugins
     build:
       context: ./.docker/fedora-gst-main
       dockerfile: Dockerfile-rust-bootstrap
       args:
-        DEFAULT_BRANCH: main  # Set the default branch here      
+        DEFAULT_BRANCH: delete_rs_plugins  # Set the default branch here      
     #   network: host
     # network_mode: host
     command: tail -f /dev/null
