--- a/.docker/buster-gst/Dockerfile-main
+++ b/.docker/buster-gst/Dockerfile-main
@@ -54,7 +54,8 @@ RUN apt update && \
 # # Enable venv
 # ENV PATH="/opt/venv/bin:$PATH"    
 
-RUN pip3 install meson==0.62.2 hotdoc==0.13.7 ninja tomli distro
+# RUN pip3 install meson==1.3.0 hotdoc==0.16 ninja tomli 
+RUN pip3 install distro
 
 RUN git clone -b ${DEFAULT_BRANCH} https://github.com/drunkody/cerbero.git && \
     mkdir $HOME/.cerbero && \
